Add backup to api docs
